# cursor_test

./: README.md  pyproject.toml
src/: asgi.py  settings.py  urls.py  views.py  wsgi.py
templates/: base.html  home.html  subpage.html
