[tool.poetry]
name = "hello-cursor"
version = "0.1.0"
description = "Django Hello World app"
authors = ["izabelaberez@gmail.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = ">=5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
